# PalindromicNumberGenerator

PalindromicNumberGenerator/: CMakeLists.txt
PalindromicNumberGenerator/PalindromicNumberGenerator/: CMakeLists.txt  PalindromicNumberGenerator.c  PalindromicNumberGenerator.h
