# CMakeList.txt : CMake project for PalindromicNumberGenerator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (PalindromicNumberGenerator "PalindromicNumberGenerator.c" "PalindromicNumberGenerator.h")

# TODO: Add tests and install targets if needed.
